feat: utilizando icones da lib lucid

--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "expo": "53.0.20",
     "expo-status-bar": "~2.2.3",
+    "install": "^0.13.0",
+    "lucide-react-native": "^0.539.0",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-native": "0.79.5",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
