--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lucide-react-native": "^0.539.0",
     "react": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-svg": "15.11.2"
+    "react-native-svg": "15.11.2",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
